--- a/src/components/Button/styles/IconButton.module.scss
+++ b/src/components/Button/styles/IconButton.module.scss
@@ -21,10 +21,10 @@
     // box-shadow: boxShadow(var(--color-accent-90));
   }
   > .icon-prepend {
-    fill: var(--color-accent-9);
+    color: var(--color-accent-9);
   }
 
   > .icon-append {
-    fill: var(--color-accent-9);
+    color: var(--color-accent-9);
   }
 }
