--- a/src/components/Button/styles/SecondaryButton.module.scss
+++ b/src/components/Button/styles/SecondaryButton.module.scss
@@ -15,11 +15,11 @@
   &:focus {
   }
   > .icon-prepend {
-    fill: var(--color-accent-9);
+    color: var(--color-accent-9);
   }
 
   > .icon-append {
-    fill: var(--color-accent-9);
+    color: var(--color-accent-9);
   }
 
   &.button--high-contrast {
