--- a/src/components/Tooltip/Tooltip.module.scss
+++ b/src/components/Tooltip/Tooltip.module.scss
@@ -1,30 +1,42 @@
-.tooltipContainer {
+.tooltip {
   position: relative;
   display: inline-block;
-  cursor: pointer;
 }
 
-.tooltip {
+.tooltip .tooltiptext {
   visibility: hidden;
-  background-color: var(--color-gray-1);
-  border: 1px solid var(--color-gray-a4);
+  max-width: 200px;
+  background-color: var(--color-gray-12);
+  color: var(--color-gray-1);
   text-align: center;
-  padding: 8px;
   border-radius: var(--radius-4);
+  padding: var(--space-3);
+  box-sizing: border-box;
   position: absolute;
-  z-index: 999;
-  line-height: 1;
-
-  opacity: 0;
-  transition: opacity 0.3s;
+  z-index: 1;
+  bottom: 150%;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: var(--font-size-3);
 }
 
-.tooltipContainer:hover .tooltip {
+.tooltip .ellipsisContent {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.tooltip .tooltiptext::after {
+  content: '';
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  border-width: 5px;
+  border-style: solid;
+  border-color: var(--color-gray-12) transparent transparent transparent;
+}
+
+.tooltip:hover .tooltiptext {
   visibility: visible;
-  opacity: 1;
-}
-
-.multiline {
-  width: 200px; // Adjust as needed
-  text-align: left;
 }
