--- a/src/components/Button/styles/PrimaryButton.module.scss
+++ b/src/components/Button/styles/PrimaryButton.module.scss
@@ -14,11 +14,11 @@
   &:focus {
   }
   > .icon-prepend {
-    color: var(--color-accent-9);
+    color: var(--color-accent-9-contrast);
   }
 
   > .icon-append {
-    color: var(--color-accent-9);
+    color: var(--color-accent-9-contrast);
   }
 
   &.button--high-contrast {
