--- a/src/components/Kbd/Kbd.module.scss
+++ b/src/components/Kbd/Kbd.module.scss
@@ -7,7 +7,6 @@
   border-radius: var(--radius-2);
   letter-spacing: -0.025em;
   word-spacing: -0.1em;
-  font-size: var(--font-size-2);
   font-weight: 400;
   font-family: 'Inter';
 
@@ -25,6 +24,23 @@
   &--secondary {
     color: var(--color-gray-12);
     background-color: var(--color-gray-3);
+  }
+
+  &--small {
+    padding: var(--space-0) var(--space-1);
+    font-size: var(--font-size-1);
+  }
+  &--medium {
+    padding: var(--space-0) var(--space-2);
+    font-size: var(--font-size-2);
+  }
+  &--large {
+    padding: var(--space-0) var(--space-2);
+    font-size: var(--font-size-3);
+  }
+  &--xlarge {
+    padding: var(--space-0) var(--space-3);
+    font-size: var(--font-size-4);
   }
 }
 
