--- a/src/components/Badge/Badge.module.scss
+++ b/src/components/Badge/Badge.module.scss
@@ -12,15 +12,31 @@
 .badge--primary {
   background-color: var(--color-accent-9);
   color: var(--color-accent-9-contrast);
+
+  &.badge--high-contrast {
+    color: var(--color-gray-1);
+    background-color: var(--color-accent-12);
+  }
 }
 
 .badge--secondary {
   color: var(--color-accent-11);
   background-color: var(--color-accent-4);
+
+  &.badge--high-contrast {
+    color: var(--color-accent-12);
+    background-color: var(--color-accent-4);
+  }
 }
 
 .badge--outlined {
   background-color: transparent;
   color: var(--color-accent-11);
   border: 1px solid var(--color-accent-a10);
+
+  &.badge--high-contrast {
+    background-color: transparent;
+    color: var(--color-accent-12);
+    border: 1px solid var(--color-accent-a9);
+  }
 }
