--- a/src/components/Badge/Badge.module.scss
+++ b/src/components/Badge/Badge.module.scss
@@ -9,7 +9,7 @@
   color: var(--color-accent-9-contrast);
 }
 
-.badge--primary {
+.badge--solid {
   background-color: var(--color-accent-9);
   color: var(--color-accent-9-contrast);
 
@@ -19,7 +19,7 @@
   }
 }
 
-.badge--secondary {
+.badge--soft {
   color: var(--color-accent-11);
   background-color: var(--color-accent-4);
 
