--- a/src/components/Button/styles/SolidButton.module.scss
+++ b/src/components/Button/styles/SolidButton.module.scss
@@ -1,4 +1,4 @@
-.button--primary {
+.button--solid {
   color: var(--color-accent-9-contrast);
   background-color: var(--color-accent-9);
   &:hover {
