--- a/src/components/TextArea/TextArea.module.scss
+++ b/src/components/TextArea/TextArea.module.scss
@@ -28,7 +28,7 @@
     min-height: 28px;
   }
   resize: none;
-  &--primary {
+  &--solid {
     &:focus,
     &:hover {
       outline: none;
@@ -37,7 +37,7 @@
     }
   }
 
-  &--secondary {
+  &--soft {
     &:focus,
     &:hover {
       outline: none;
