--- a/src/components/Kbd/Kbd.module.scss
+++ b/src/components/Kbd/Kbd.module.scss
@@ -10,7 +10,7 @@
   font-weight: 400;
   font-family: 'Inter';
 
-  &--primary {
+  &--solid {
     color: var(--color-gray-12);
     background-color: var(--color-gray-3);
     box-shadow:
@@ -21,7 +21,7 @@
       0 0 0 0.05em var(--color-gray-a5),
       0 0.08em 0.17em var(--color-gray-a7);
   }
-  &--secondary {
+  &--soft {
     color: var(--color-gray-12);
     background-color: var(--color-gray-3);
   }
