--- a/src/components/Button/styles/BaseButton.module.scss
+++ b/src/components/Button/styles/BaseButton.module.scss
@@ -1,10 +1,7 @@
 .button {
   // Layout
-  padding: var(--space-0) var(--space-3);
   border: none;
   vertical-align: middle;
-  border-radius: max(var(--radius-3), var(--radius-full));
-  height: 34px;
   display: inline-flex;
   align-items: center;
   gap: var(--space-2);
@@ -19,7 +16,6 @@
   }
   // Typography
   font-weight: 400;
-  font-size: var(--font-size-4);
   line-height: 1.5;
   text-align: center;
   white-space: nowrap;
@@ -51,7 +47,12 @@
     font-size: var(--font-size-5);
     padding: var(--space-2) var(--space-4);
   }
-
+  &--medium {
+    font-size: var(--font-size-4);
+    padding: var(--space-0) var(--space-3);
+    border-radius: max(var(--radius-3), var(--radius-full));
+    height: 34px;
+  }
   &--small {
     height: 28px;
     font-size: var(--font-size-3);
