--- a/src/components/ProgressLinear/ProgressLinear.module.scss
+++ b/src/components/ProgressLinear/ProgressLinear.module.scss
@@ -2,7 +2,6 @@
   width: 100%;
   height: 20px; // Default height
   position: relative;
-  background-color: var(--color-accent-a5);
   overflow: hidden; // Ensure child divs don't overflow
 
   &.indeterminate .linearPath {
@@ -20,7 +19,7 @@
     border-radius: max(var(--radius-3), var(--radius-full));
     top: 0;
     left: 0;
-    background-color: var(--color-accent-a5);
+    background-color: var(--color-accent-6);
   }
 
   .linearPath {
