--- a/src/components/Tab/Tab.module.scss
+++ b/src/components/Tab/Tab.module.scss
@@ -11,10 +11,13 @@
 .content {
 }
 .trigger {
+  display: flex;
+  align-items: center;
   appearance: none;
   border: none;
   cursor: pointer;
   text-decoration: none;
+  box-sizing: border-box;
   color: var(--color-accent-9);
   background-color: transparent;
 
@@ -33,13 +36,13 @@
   &--large {
     height: 40px;
     font-size: var(--font-size-5);
-    padding: var(--space-0) var(--space-4);
+    padding: var(--space-1) var(--space-4);
     border-radius: max(var(--radius-4), var(--radius-full));
   }
 
   &--medium {
     font-size: var(--font-size-4);
-    padding: var(--space-0) var(--space-3);
+    padding: var(--space-1) var(--space-3);
     border-radius: max(var(--radius-3), var(--radius-full));
     height: 34px;
   }
@@ -54,7 +57,7 @@
     height: 28px;
     font-size: var(--font-size-3);
     border-radius: max(var(--radius-3), var(--radius-full));
-    padding: var(--space-0) var(--space-2);
+    padding: var(--space-1) var(--space-2);
   }
 
   &.trigger--high-contrast {
