--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -74,6 +74,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: var(--space-2);
 
     &--outlined {
       border-bottom: 1px solid var(--color-gray-a6);
