--- a/src/components/Toast/Toast.module.scss
+++ b/src/components/Toast/Toast.module.scss
@@ -1,34 +1,39 @@
 .toast {
-  position: fixed;
   z-index: 9999;
   max-width: 300px;
   opacity: 0;
-  transform: translateY(8px);
   transition:
     opacity 0.2s ease-in-out,
     transform 0.2s ease-in-out;
+  margin: var(--space-4);
+
   &.open {
     opacity: 1;
     transform: translateY(0);
   }
 }
 
-.topLeft {
-  top: var(--space-4);
-  left: var(--space-4);
-}
-
-.topRight {
-  top: var(--space-4);
-  right: var(--space-4);
-}
-
-.bottomLeft {
-  bottom: var(--space-4);
-  left: var(--space-4);
-}
-
-.bottomRight {
-  bottom: var(--space-4);
-  right: var(--space-4);
+.toastContainer {
+  position: fixed;
+  z-index: 9999;
+  &.topLeft {
+    top: var(--space-4);
+    left: var(--space-4);
+    transform: translateY(8px);
+  }
+  &.topRight {
+    top: var(--space-4);
+    right: var(--space-4);
+    transform: translateY(8px);
+  }
+  &.bottomLeft {
+    bottom: var(--space-4);
+    left: var(--space-4);
+    transform: translateY(8px);
+  }
+  &.bottomRight {
+    bottom: var(--space-4);
+    transform: translateY(8px);
+    right: var(--space-4);
+  }
 }
