--- a/src/components/AppBar/AppBar.module.scss
+++ b/src/components/AppBar/AppBar.module.scss
@@ -4,6 +4,7 @@
   width: 100%;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   align-items: center;
   box-sizing: border-box;
   height: 64px;
@@ -14,7 +15,7 @@
     border-bottom: 1px solid var(--color-gray-a6);
   }
   &--translucent {
-    background-color: var(--color-panel-translucent);
+    background-color: rgba(0, 0, 0, 0);
     backdrop-filter: blur(15px);
     -webkit-backdrop-filter: blur(15px);
     border-bottom: 1px solid var(--color-gray-a6);
@@ -39,6 +40,8 @@
 
 .heading {
   height: 100%;
+  display: flex;
+  align-items: center;
 }
 
 .body {
