--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,7 +1,7 @@
 @import '@/styles/lib/functions';
 @import './styles/BaseButton.module.scss';
 @import './styles/SolidButton.module.scss';
-@import './styles/SoftButton.module.scss';
+@import './styles/GhostButton.module.scss';
 @import './styles/OutlinedButton.module.scss';
 @import './styles/TextButton.module.scss';
 @import './styles/IconButton.module.scss';
