--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -13,6 +13,7 @@
   // Menu Item styles
   &--item {
     display: flex;
+    gap: var(--space-2);
     align-items: center;
     appearance: none;
     border: none;
@@ -23,6 +24,12 @@
     color: var(--color-accent-9);
     background-color: transparent;
 
+    > .iconPrepend,
+    > .iconAppend {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
     &:hover {
       background-color: var(--color-accent-4);
     }
@@ -75,6 +82,16 @@
         background-color: var(--color-accent-12);
         box-shadow: boxShadowAlpha(var(--color-accent-11));
       }
+    }
+  }
+
+  &--label {
+    font-size: var(--font-size-3);
+    color: var(--color-accent-11);
+    font-weight: bold;
+    padding: 0 var(--space-2);
+    &.high-contrast {
+      color: var(--color-accent-10);
     }
   }
 }
