--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -22,6 +22,7 @@
     text-decoration: none;
     box-sizing: border-box;
     color: var(--color-accent-12);
+    font-weight: 400;
     background-color: transparent;
 
     > .iconPrepend,
