--- a/src/components/TextField/TextField.module.scss
+++ b/src/components/TextField/TextField.module.scss
@@ -7,6 +7,13 @@
     }
   }
 
+  &.xlarge {
+    .label {
+      font-size: var(--font-size-4);
+      margin-bottom: var(--space-1);
+    }
+  }
+
   &.small {
     .label {
       font-size: var(--font-size-2);
@@ -28,6 +35,12 @@
 
   &.large {
     .input {
+      height: 40px;
+      padding: var(--space-1) var(--space-4);
+    }
+  }
+  &.xlarge {
+    .input {
       height: 48px;
       padding: var(--space-1) var(--space-4);
     }
@@ -36,7 +49,7 @@
   &.small {
     .input {
       height: 28px;
-      padding: var(--space-1) var(--space-2);
+      padding: var(--space-1) var(--space-3);
     }
   }
 }
@@ -49,13 +62,13 @@
   width: 100%;
   height: 32px;
   line-height: 28px;
-  padding: var(--space-1) var(--space-2);
+  padding: var(--space-1) var(--space-3);
   border: 2px solid transparent;
-  border-radius: var(--radius-4);
+  border-radius: max(var(--radius-3), var(--radius-full));
   outline: none;
   background-color: transparent;
   border-color: var(--color-gray-6);
-  color: var(--color-accent-9-contrast);
+  color: var(--color-gray-12);
   transition: border 0.3s ease;
   margin-bottom: 20px;
 
