--- a/src/components/Badge/Badge.module.scss
+++ b/src/components/Badge/Badge.module.scss
@@ -21,11 +21,11 @@
 
 .badge--ghost {
   color: var(--color-accent-11);
-  background-color: var(--color-accent-4);
+  background-color: var(--color-accent-a4);
 
   &.badge--high-contrast {
     color: var(--color-accent-12);
-    background-color: var(--color-accent-4);
+    background-color: var(--color-accent-a4);
   }
 }
 
