--- a/src/components/Button/styles/TextButton.module.scss
+++ b/src/components/Button/styles/TextButton.module.scss
@@ -4,7 +4,7 @@
   // background-color: rgba(var(--color-accent-90), 0.2);
 
   &:hover {
-    background-color: var(--color-accent-4);
+    background-color: var(--color-accent-a4);
   }
 
   &:active {
@@ -29,7 +29,7 @@
     // background-color: rgba(var(--color-accent-90), 0.2);
 
     &:hover {
-      background-color: var(--color-accent-4);
+      background-color: var(--color-accent-a4);
     }
 
     &:active {
