--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -36,7 +36,7 @@
     }
 
     &.active {
-      background-color: var(--color-accent-5);
+      background-color: var(--color-accent-a5);
       &:hover {
         background-color: var(--color-accent-6);
       }
@@ -74,7 +74,7 @@
       color: var(--color-accent-12);
 
       &:hover {
-        background-color: var(--color-accent-5);
+        background-color: var(--color-accent-a5);
       }
 
       &.active {
