--- a/src/components/IconButton/IconButton.module.scss
+++ b/src/components/IconButton/IconButton.module.scss
@@ -3,3 +3,4 @@
 @import './styles/SolidButton.module.scss';
 @import './styles/GhostButton.module.scss';
 @import './styles/OutlinedButton.module.scss';
+@import './styles/TextButton.module.scss';
